Add MIT No Attribution license and cross-compatibility note
Ahead of making this repository public, adopt the MIT No Attribution
("MIT-0") license -- the most permissive MIT variant: it grants
unrestricted use without even requiring that the copyright or
permission notices be retained.

Also update the README's License section to reference the new file and
add a trailing section describing how SimpleJavaTemplates interacts
with DurableJavaThreads. With both on the classpath, DJT auto-chains
SJT's agent, so users only need `-javaagent:durable-threads.jar` on
the command line.

https://claude.ai/code/session_016Z8kWNz2hsTBsMRj18YMYL